front: move simpleWords list in an utils file, avoid using words containing unreadable letters when the options is selected, enable the click on the navbar Unlock button to avoid being stuck on the setting page after a reload

--- a/front/src/app/components/vault/modals/change-master-password-modal/change-master-password-modal.component.css
+++ b/front/src/app/components/vault/modals/change-master-password-modal/change-master-password-modal.component.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-top: 5px;
 }
 
 .settings-title-container {
